# DES_Middleware

./: CMakeLists.txt  GamePad.cpp  GamePad.hpp  PiracerClass.cpp  PiracerClass.hpp  example.py  main.cpp
Middleware/: CMakeLists.txt  main.cpp
Middleware/src/: PiracerClient.cpp  PiracerInterface.cpp  PiracerStubImpl.cpp
can-interface/: CMakeLists.txt
piracer-interface/: CMakeLists.txt
project-piracer/: CMakeLists.txt
project-piracer/fidl/: Piracer.fdepl  Piracer.fidl
project-piracer/src/: PiracerClient.cpp  PiracerClient.hpp  PiracerService.cpp  PiracerStubImpl.cpp  PiracerStubImpl.hpp
project-piracer/src-gen/v1/commonapi/: PiracerProxy.hpp  PiracerProxyBase.hpp  PiracerSomeIPProxy.cpp  PiracerSomeIPProxy.hpp  PiracerSomeIPStubAdapter.cpp  PiracerSomeIPStubAdapter.hpp  PiracerStub.hpp  PiracerStubDefault.hpp
